# quemistry_genai

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cicd.yml
aws/: task-definition.json
question/: chain.py  server.py
