[tool.poetry]
package-mode = false
name = "quemistry-genai"
version = "0.1.0"
description = "Generative AI with langchain"
authors = ["quemistry mtech"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.112.2"
langserve = "^0.2.2"
langchain-openai = "^0.1.23"
langchain-google-vertexai = "^1.0.10"
sse-starlette = "^2.1.3"
langchain = "^0.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
